Mais um commit link

--- a/index.html
+++ b/index.html
@@ -16,58 +16,12 @@
         <img class="image" src="./publico/images/icone-sacola.png" width="30" height="30">
         <h1>Loja do Alifer</h1>
     </header>
-
-    <div class="conteiner-cards">
-        <div class="card">
-            <img src="./publico/images/shopping.png" width="70" height="70">
-            <h2>Notebook</h2>
-            <br>
-            <br>
-            <a class="btn" href="http://">Adquerir</a>
-        </div>
-
-        <div class="card">
-            <img src="./publico/images/shopping.png" width="70" height="70">
-            <h2>Notebook</h2>
-            <br>
-            <br>
-            <a class="btn" href="http://">Adquerir</a>
-
-        </div>
-
-        <div class="card">
-            <img src="./publico/images/shopping.png" width="70" height="70">
-            <h2>Notebook</h2>
-            <br>
-            <br>
-            <a class="btn" href="http://">Adquerir</a>
-
-        </div>
-
-        <div class="card">
-            <img src="./publico/images/shopping.png" width="70" height="70">
-            <h2>Notebook</h2>
-            <br>
-            <br>
-            <a class="btn" href="http://">Adquerir</a>
-
-        </div>
-        <div class="card">
-            <img src="./publico/images/shopping.png" width="70" height="70">
-            <h2>Notebook</h2>
-            <br>
-            <br>
-            <a class="btn" href="http://">Adquerir</a>
-
-        </div>
-    </div>
+ 
+    <div class="conteiner-cards"></div>
 
     <footer class="footer">Loja do Alifer</footer>
 
-
-    <script src="./src/js/main.js">
-
-    </script>
+    <script src="./src/js/main.js"></script>
 </body>
 
 </html>
