--- a/src/Pages/blog.htm
+++ b/src/Pages/blog.htm
@@ -11,13 +11,15 @@
     <link rel="stylesheet" type="text/css" href="../Styles/Global.css">
     <link rel="stylesheet" type="text/css" href="../Styles/Menu.css">
     <link rel="stylesheet" type="text/css" href="../Styles/Des-Card.css">
-    <link rel="stylesheet" type="text/css" href="../Styles/Blog.css">
-    
+    <link rel="stylesheet" type="text/css" href="../Styles/Blog.css">    
     <title>Blog</title>
 </head>
 
 <body id="acima" style=" background: #FCFCFC;   ">   
-    <header class="header"></header>
+    <header class="header">
+        <a href="../../index.html"><img class="image" src="../../publico/images/logo.png" width="25" height="25"></a>
+        <h1>Loja do Alifer</h1>
+    </header>
     <div class="navigation"></div>
     <div class="blogpost"></div>    
     <footer class="footer">Loja do Alifer</footer>
