--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 </head>
 
 <body id="acima">
-    <header class="header "></header>
+    <header class="header ">
+        <a href="../../index.html"><img class="image" src="./publico/images/logo.png" width="25" height="25"></a>
+        <h1>Loja do Alifer</h1>
+    </header>
     <div class="navigation"></div>
 
     <div class="rectangle-cards"></div>
@@ -24,7 +27,7 @@
     <div class="conteiner-cards"></div>
     <div class="captura"></div>
 
-    <footer class="footer">Loja do Alifer</footer>
+    <footer class="footer"></footer>
    
     <script type="module">
         import { App } from './src/App.js'
